--- a/styles/style.css
+++ b/styles/style.css
@@ -29,7 +29,7 @@ main{
   margin: auto;
   position: absolute;
   top:142px;
-  bottom:160px; 
+  bottom:140px; 
   left:0px; 
   right:0px;
   overflow:auto;
@@ -48,8 +48,14 @@ button{
 }
 
 .button-unlit{
+  padding: 15px;
   background-color: #33343A;
   border-radius: 5px;
+  border: 0px;
+  color: #0E0E11;
+  font-weight: 700;
+  font-family: 'Darker Grotesque', sans-serif;;
+  font-size: 24px;
 }
 
 .button-lit{
