--- a/styles/style.css
+++ b/styles/style.css
@@ -154,6 +154,10 @@ header{
   padding:15px;
 }
 
+.grey-bg{
+  background-color: #888;
+}
+
 .collapsible-button{
   display: block;
   width: 100%;
@@ -285,6 +289,7 @@ footer{
   position: relative;
   display: inline-block; 
   text-align: center;
+  max-width: 100%;
 }
 
 .filter-button{
@@ -304,9 +309,12 @@ footer{
 
 .dropup-content{
   position: absolute;
-  bottom: 121px;
+  right:0px;
+  bottom: 124px;
   background-color: #111113;
-  min-width: 235px;
+  max-height: 60vh;
+  overflow-y: auto;
+  /* min-width: 235px; */
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
@@ -342,3 +350,12 @@ footer{
 .focus-visible:focus {
   outline: #CB7519 solid 2px;
 }
+
+/* @media all and (max-width:500px){
+  .dropup-content{
+    position: relative;
+    bottom: 124px;
+    background-color: #111113;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  }
+} */
